# lunar-encoder

./: .gitignore  Dockerfile  README.md  config.env  pyproject.toml  requirements.txt  setup.cfg  setup.py
lunar_encoder/: __init__.py  api.py  app.py  mlrun-nonprod.env  utils.py
lunar_encoder/cli/: __init__.py
lunar_encoder/client/: inference_client.py
lunar_encoder/config/: __init__.py
lunar_encoder/encoders/: base.py  huggingface.py
lunar_encoder/generic_transformer_encoder/: __init__.py  generic_transformer_encoder.py
lunar_encoder/models/: base_encoder.py  dual_passage_encoder.py  passage_encoder.py
lunar_encoder/models/config/: __init__.py
lunar_encoder/models/losses/: base_loss.py  contrastive_loss.py  pnll_loss.py  triplet_loss.py
lunar_encoder/models/modules/: dense.py  pooling.py  transformer.py
lunar_encoder/models/typing/: __init__.py
lunar_encoder/modules/: dense.py  pooling.py  transformer.py
lunar_encoder/proxy/: proxy.py
lunar_encoder/server/handlers/: passage_encoder_handler.py
lunar_encoder/training/: __init__.py  trainer.py
lunar_encoder/training/config/: __init__.py
lunar_encoder/training/losses/: base_loss.py  contrastive_loss.py  triplet_loss.py
lunar_encoder/training/typing/: __init__.py
lunar_encoder/typing/: __init__.py  encoder_io.py
lunar_encoder/universal_sentence_encoder/: universal_sentence_encoder.py
lunar_encoder/utils/: __init__.py  serialization.py
resources/configs/: log4j2.xml  passage_encoder.json  torchserve.properties
scripts/: install.sh
(+2 files in other folders)
